<resources>
    <string name="app_name">Manda</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">我的课程</string>
    <string name="title_notifications">个人中心</string>
    <string name="personal_favor">我的收藏</string>
    <string name="personal_course">已购课程</string>
    <string name="personal_course_intre">查询购买的课程</string>
    <string name="personal_question">问题与反馈</string>
    <string name="personal_question_intre">常见问题及使用反馈</string>
    <string name="personal_setting">账号管理</string>
    <string name="personal_setting_intre">修改资料 账号安全</string>
    <string name="personal_wallet">我的钱包</string>
    <string name="personal_wallet_intre">管理账户余额，充值</string>
    <string name="personal_invite">邀请好友</string>
    <string name="personal_invite_intre">成功邀请可获得额外课程</string>
    <string name="personal_intre">\@Manda</string>
    <string name="homepage_search">点击查询字/词/句</string>
    <string name="toolbar_translate">中英互译</string>
    <string name="toolbar_dictionary">字典</string>
    <string name="toolbar_mynewwords">生词本</string>
    <string name="toolbar_practice">口语训练</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="hint_accounter">请输入您的用户名</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="hint_password_again">请确认您的密码</string>
    <string name="check">确认</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码？</string>
    <string name="checkmessage">本人已阅读并同意注册协议</string>
    <string name="name_already_exist">用户已存在</string>
    <string name="pwd_not_the_same">前后密码不一致</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="account_empty">账号不能为空</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="pwd_check_empty">请再次确认密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">密码错误</string>
    <string name="user_cancel">退出</string>
    <string name="translation_hint">请输入内容</string>
    <string name="translate_confirm">翻译</string>
    <string name="day_word">每日一句</string>
    <string name="current_test">当前训练</string>
    <string name="excellent_course">精品课程</string>
    <string name="interpret">查看解释</string>
    <string name="w">不积跬步，无以至千里            ————《荀子》</string>
    <string name="keep_study">继续学习</string>
    <string name="history_course">历史课程</string>
    <string name="learned_time">学习时长</string>
    <string name="learned_courses">学习课程数</string>
    <string name="hint">提示</string>
    <string name="yes">是</string>
    <string name="read_words">请确认已阅读完注册协议！</string>
    <string name="translate_paste">粘贴到此处</string>
    <string name="trans_selection_1">英语    ->    中文</string>
    <string name="trans_selection_2">中文    ->    英语</string>
    <string name="w_detail">不积累一步半步，就没有办法到达千里的地方;比喻积累的作用，可以充实、丰富、完善自己。可用来论说学习工作贵在不断积累。</string>
    <string name="score">评分: </string>
</resources>
