<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/autoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">  <!--不加vertical就会覆盖 -->

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/homepage_search"
            style="@style/homepage_item_style"
            android:background="@color/colorPrimary">

            <TextView
                style="@style/titlebar_text_center"
                android:layout_width="@dimen/homepage_title_width"
                android:layout_height="match_parent"
                android:text="@string/app_name" />

            <EditText
                android:id="@+id/search_word"
                style="@style/titlebar_text_left"
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/homepage_title_width"
                android:background="@color/white"
                android:hint="@string/homepage_search" />

            <ImageView
                android:id="@+id/search_button"
                style="@style/titlebar_img"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4px"
                android:background="@color/white"
                android:contentDescription="@null"
                android:focusable="false"
                android:src="@drawable/search" />

        </com.zhy.autolayout.AutoRelativeLayout>


        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/homepage_choice"
            style="@style/homepage_choice_style"
            android:background="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/homepage_choice_left"
                style="@style/titlebar_text_center"
                android:layout_width="@dimen/half"
                android:layout_height="match_parent"
                android:text="@string/toolbar_practice" />

            <TextView
                android:id="@+id/homepage_choice_right"
                style="@style/titlebar_text_center"
                android:layout_width="@dimen/half"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/half"
                android:text="@string/toolbar_mynewwords" />


        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/day_word"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg">
            <TextView
                android:id="@+id/everydayWord"
                android:layout_width="@dimen/sever_eight"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_title_word"
                android:text="@string/w"
                android:textSize="@dimen/big_word"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_width"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/small_title_word"
                android:background="@color/colorPrimary"
                android:text="@string/interpret"
                android:textColor="@color/white" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/current_test"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_width"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/small_title_word"
                android:background="@color/colorPrimary"
                android:text="@string/keep_study"
                android:textColor="@color/white" />

        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/excellent_course"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg"></com.zhy.autolayout.AutoRelativeLayout>


    </com.zhy.autolayout.AutoLinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>