<?xml version="1.0" encoding="utf-8"?>

<com.zhy.autolayout.AutoLinearLayout
    android:id="@+id/myExercise"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">  <!--不加vertical就会覆盖 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/day_word"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg">

            <TextView
                android:id="@+id/everydayWord"
                android:layout_width="@dimen/sever_eight"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/small_title_word"
                android:text="@string/w"
                android:textSize="@dimen/big_word" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_width"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/small_title_word"
                android:background="@color/colorPrimary"
                android:text="@string/interpret"
                android:textColor="@color/white" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/current_test"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_width"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/small_title_word"
                android:background="@color/colorPrimary"
                android:text="@string/keep_study"
                android:textColor="@color/white" />

        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_title"
            android:text="@string/excellent_course"
            android:textSize="@dimen/small_title_word"
            android:background="@drawable/item_bg"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/item_bg">

        </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>