<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/autoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">  <!--不加vertical就会覆盖 -->

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/homepage_search"
                style="@style/homepage_item_style"
                android:background="@color/colorPrimary">

                <TextView
                    style="@style/titlebar_text_center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_dashboard" />

                <ImageView
                    android:id="@+id/search"
                    style="@style/titlebar_img_right"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@drawable/message" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:background="@drawable/item_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_title"
                    android:text="@string/current_test"
                    style="@style/card_title"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_width"
                    style="@style/card_button"
                    android:text="@string/interpret" />

            </com.zhy.autolayout.AutoRelativeLayout>



            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:layout_marginTop="20px"
                android:background="@drawable/item_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_title"
                    android:text="@string/history_course"
                    style="@style/card_title"/>
            </com.zhy.autolayout.AutoRelativeLayout>

        </com.zhy.autolayout.AutoLinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>