<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/back_title"  />

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/login_layout_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="30px"
        android:paddingLeft="25px"
        android:paddingRight="25px"
        android:paddingTop="5px"
        android:background="@drawable/transparent">

        <TextView
            android:id="@+id/login_text_uid"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="60px"
            android:gravity="center_vertical"
            android:paddingLeft="30px"
            android:text="@string/account" />

        <EditText
            android:id="@+id/login_et_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_text_uid"
            android:layout_alignLeft="@+id/login_text_uid"
            android:layout_alignRight="@+id/login_text_uid"
            android:layout_alignTop="@+id/login_text_uid"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="65px" />

        <TextView
            android:id="@+id/login_text_pwd"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_alignLeft="@+id/login_text_uid"
            android:layout_alignRight="@+id/login_text_uid"
            android:layout_below="@+id/login_text_uid"
            android:layout_marginTop="10px"
            android:gravity="center_vertical"
            android:paddingLeft="30px"
            android:text="@string/password" />

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_text_pwd"
            android:layout_alignLeft="@+id/login_text_pwd"
            android:layout_alignRight="@+id/login_text_pwd"
            android:layout_alignTop="@+id/login_text_pwd"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="65px" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:layout_alignLeft="@+id/login_text_uid"
            android:layout_alignRight="@+id/login_text_uid"
            android:layout_below="@+id/login_text_pwd"
            android:layout_marginBottom="15px"
            android:layout_marginTop="25px"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="35px" />

        <CheckBox
            android:id="@+id/login_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_login"
            android:text="@string/remember_password"
            android:checked="false"
            android:textSize="25px"
            android:textColor="@color/gray"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_below="@+id/login_remember"
            android:layout_alignLeft="@+id/login_btn_login"
            android:background="@color/white"
            android:layout_marginTop="15px"
            android:layout_marginBottom="10px"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="35px"
            android:textColor="@color/gray"/>

        <Button
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_below="@+id/login_remember"
            android:layout_alignRight="@+id/login_btn_login"
            android:background="@color/white"
            android:layout_marginTop="15px"
            android:layout_marginBottom="10px"
            android:gravity="center"
            android:text="@string/forget"
            android:textSize="35px"
            android:textColor="@color/gray"/>

    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoRelativeLayout>