<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/back_title"  />

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/login_layout_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="15px"
        android:paddingLeft="35px"
        android:paddingRight="35px"
        android:paddingTop="10px"
        android:background="@drawable/transparent">



        <EditText
            android:id="@+id/register_et_uid"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="80px"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="140px"
            android:textSize="35px"
            android:hint="@string/account"/>

        <ImageView
            android:layout_width="100px"
            android:layout_height="40px"
            android:layout_alignLeft="@+id/register_et_uid"
            android:layout_alignTop="@+id/register_et_uid"
            android:layout_alignBottom="@+id/register_et_uid"
            android:paddingLeft="15px"
            android:src="@drawable/account"/>



        <EditText
            android:id="@+id/register_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_alignLeft="@+id/register_et_uid"
            android:layout_alignRight="@+id/register_et_uid"
            android:layout_below="@+id/register_et_uid"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="140px"
            android:textSize="35px"
            android:hint="@string/hint_password"/>

        <ImageView
            android:layout_width="100px"
            android:layout_height="40px"
            android:layout_alignLeft="@+id/register_et_pwd"
            android:layout_alignTop="@+id/register_et_pwd"
            android:layout_alignBottom="@+id/register_et_pwd"
            android:paddingLeft="15px"
            android:src="@drawable/password_aga"/>


        <EditText
            android:id="@+id/register_aga_pwd"
            android:layout_height="80px"
            android:layout_width="match_parent"
            android:layout_alignLeft="@+id/register_et_pwd"
            android:layout_alignRight="@+id/register_et_pwd"
            android:layout_below="@+id/register_et_pwd"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="140px"
            android:textSize="35px"
            android:hint="@string/hint_password_again"/>

        <ImageView
            android:layout_width="100px"
            android:layout_height="40px"
            android:layout_alignLeft="@+id/register_aga_pwd"
            android:layout_alignTop="@+id/register_aga_pwd"
            android:layout_alignBottom="@+id/register_aga_pwd"
            android:paddingLeft="15px"
            android:src="@drawable/password"/>

        <Button
            android:id="@+id/register_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:layout_alignLeft="@+id/register_aga_pwd"
            android:layout_alignRight="@+id/register_aga_pwd"
            android:layout_below="@+id/register_aga_pwd"
            android:layout_marginBottom="20px"
            android:layout_marginTop="40px"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="35px" />

        <CheckBox
            android:id="@+id/check_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_btn_login"
            android:text="@string/checkmessage"
            android:checked="false"
            android:textSize="26px"
            android:textColor="@color/gray"/>

    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoRelativeLayout>